ethics copy and styling, capitalization, added read times, consistency tweaks

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -12,7 +12,7 @@ import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 </PageDescription>
 
-Read time | *5 mins*
+Read time | **5 mins**
 
 ## What is artificial intelligence?
 
