--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -12,7 +12,7 @@ import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 </PageDescription>
 
-Read time | *5 mins*
+Read time | **5 mins**
 
 ## What is data?
 
@@ -27,7 +27,7 @@ What follows are several of the key considerations with respect to collecting an
 ### Data collection
 #### Sampling
 
-> Why? To ensure your dataset matches the real world.
+> To ensure your dataset matches the real world.
 
 Sampling helps make sure that a given sliver of data is as representative of the whole as possible.
 
@@ -43,7 +43,7 @@ In cases where the data wasn't properly sampled, you'll almost certainly come to
 
 #### (Ease of) Acquiring data
 
-> Why? To know what it takes to actually get the data.
+> To know what it takes to actually get the data.
 
 Data can take multiple different forms. Sometimes it's in a database, sometimes it's in a filing cabinet, sometimes it's scattered across someone's desk. Some data is proprietary and some is public domain. Sometimes someone is positive that it exists, they just have to go find it.
 
@@ -51,7 +51,7 @@ Wrangling data across disparate sources can take a substantial amount of time, a
 
 #### Data completeness
 
-> Why? To make sure your data doesn’t have gaps.
+> To make sure your data doesn’t have gaps.
 
 Data completeness indicates whether all the data that you need is available in your data resources.
 
@@ -70,7 +70,7 @@ In a contrived example, suppose you're making a mood tracker and you import a ta
 ### Data organization
 #### Consolidating data
 
-> Why? To put it all in one place and make it work together.
+> To put it all in one place and make it work together.
 
 You have your mountain of data pulled from several different piles digitized and sitting in front of you, now what? Likely it'll need to be combined and put in a single place, formatted a specific way.
 
@@ -78,13 +78,13 @@ For example, let's say you are trying to create a simple program to track your m
 
 #### Consistent data
 
-> Why? To make sure all of your data is saying the same thing.
+> To make sure all of your data is saying the same thing.
 
 Training an AI is akin to training a toddler. That toddler's knowledge is dependent on you being consistent in your teaching. For example, you can't expect your toddler to ever master arithmetic if you say 1+1=2 and also teach 1+1=3 at the same time. You can expect the same out of your system.
 
 #### Data richness
 
-> Why? To make sure that your data paints a vivid picture.
+> To make sure that your data paints a vivid picture.
 
 This means that you have enough data to get to the essence of what's really going on. It's finding the necessary data points to ensure that you're not conflating correlation with causation. Without data rich enough to describe the nature of your problem and environment, you run the risk of your AI missing the real connection. 
 
@@ -94,7 +94,7 @@ For example, let's take a famous ice cream sales and murder rate correlation. An
 ### Data collection and organization
 #### De-biased or bias transparent data
 
-> Why? To make sure your AI doesn’t optimize inequity.
+> To make sure your AI doesn’t optimize inequity.
 
 Bias — prejudice in favor of or against one thing, person, or group compared with another — can be introduced at many stages of the process. If we choose an unrepresentative sample, it skews the dataset in favor of the overrepresented. During the data entry, subjective, and often qualitative, fields are subject to the user's interpretation, e.g. assessing how you feel on a day to day basis. Annotation, or tagging and labeling the data with pertinent information, brings with it the lenses each annotator sees the world through. 
 
