--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -12,7 +12,7 @@ import { AnchorLinks, Column, PageDescription, Row, Video } from "gatsby-theme-c
 
 </PageDescription>
 
-Read time | *7 mins*
+Read time | **7 mins**
 
 ## What is machine learning?
 
