--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -75,8 +75,8 @@ Adhere to your company’s business conduct guidelines. Also, understand [nation
 
 </Column>
 
-<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
-<Aside>
+<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Aside className={'quote'}>
 
 _“Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.”_
 
