--- a/src/pages/ethics/explainability.mdx
+++ b/src/pages/ethics/explainability.mdx
@@ -72,7 +72,7 @@ decision processes.
 
 
 <Row className="hr consider">
-<Column colMd={6} colLg={7}>
+<Column colMd={5} colLg={7}>
 
 ## To consider
 
@@ -83,8 +83,8 @@ decision processes.
 
 </Column>
 
-<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
-<Aside>
+<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Aside className={'quote'}>
 
 _“IBM supports transparency and data governance policies that will ensure people understand how an AI system came to a given conclusion or recommendation. Companies must be able to explain what went into their algorithm’s recommendations. If they can’t, then their systems shouldn’t be on the market.“_
 
