--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -75,8 +75,8 @@ Instill a feedback mechanism or open dialogue with users to raise awareness of u
 
 </Column>
 
-<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
-<Aside>
+<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Aside className={'quote'}>
 
 _“By progressing new ethical frameworks for AI and thinking critically about the quality of our datasets and how humans perceive and work with AI, we can accelerate the [AI] field in a way that will benefit everyone. IBM believes that [AI] actually holds the keys to mitigating bias out of AI systems – and offers an unprecedented opportunity to shed light on the existing biases we hold as humans.“_
 
