--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -87,7 +87,7 @@ Recognize and adhere to applicable [national and international rights laws](http
 
 
 <Row className="hr consider">
-<Column colMd={6} colLg={7}>
+<Column colMd={5} colLg={7}>
 
 ## To consider
 
@@ -100,8 +100,8 @@ Recognize and adhere to applicable [national and international rights laws](http
 
 </Column>
 
-<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
-<Aside>
+<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Aside className={'quote'}>
 
 _“Individuals require mechanisms to help curate their unique identity and personal data in conjunction with policies and practices that make them explicitly aware of consequences resulting from the bundling or resale of their personal information.”_
 
