--- a/src/pages/ethics/value-alignment.mdx
+++ b/src/pages/ethics/value-alignment.mdx
@@ -56,7 +56,7 @@ Consider mapping out your understanding of your users’ values and aligning the
 
 
 <Row className="hr consider">
-<Column colMd={6} colLg={7}>
+<Column colMd={5} colLg={7}>
 
 ## To consider
 
@@ -67,8 +67,8 @@ Consider mapping out your understanding of your users’ values and aligning the
 
 </Column>
 
-<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
-<Aside>
+<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Aside className={'quote'}>
 
 _“If machines engage in human communities as autonomous agents, then those agents will be expected to follow the community’s social and moral norms. <br/> A necessary step in enabling machines to do so is to identify these norms. But whose norms?”_
 
