--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -24,7 +24,7 @@ export default HomepageTemplate;
     className="card"
     title="Basics"
     aspectRatio="1:1"
-    href="/basics/overview"
+    href="/basics"
     hoverColor="dark"
     titleColor="light"
     actionIcon="arrowRight"
@@ -40,7 +40,7 @@ export default HomepageTemplate;
       className="card"
       title="Ethics"
       aspectRatio="1:1"
-      href="/ethics/overview"
+      href="/ethics"
       actionIcon="arrowRight"
       >
 
@@ -53,7 +53,7 @@ export default HomepageTemplate;
       title="Conversation"
       titleColor="light"
       aspectRatio="1:1"
-      href="/conversation/overview"
+      href="/conversation"
       actionIcon="arrowRight"
       hoverColor="dark"
       >
