--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -27,7 +27,7 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, Row } from "gatsby-th
 
 When looking for ways to apply this cutting-edge, revolutionary technology, AI can not only dazzle, but can blind us as well. The more buzz and hype, the greater the pressure becomes to rush to create something using whatever new capabilities are presented to us. The benefit of moments like this is the opportunity to discover, experiment, and learn.
 
-We must focus our design talents upon a new type relationship with machines - machines that can hold a conversation, interpret nonverbal cues, and draw from vast stores of human knowledge. What should these relationships look like? Designing for AI requires new considerations and new rules.
+We must focus our design talents upon a new type relationship with machines - machines that can hold a conversation, interpret nonverbal cues, and draw from vast stores of human knowledge. What should these relationships look like? Designing for AI requires new considerations and new ways of thinking.
 
 When we find ourselves in such unfamiliar territory, the best way to begin is by reminding ourselves of the true purpose for any innovation: to improve the quality of human life.
 
