homepagevideo responsiveness, resourcecards, hover states

--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -111,8 +111,8 @@ AI is capable of delivering more human-like interactions with people — based o
 ![The Relationship Age](../../images/fundamentals/Image_1.png)
 
 <Caption fullWidth>
-  MutualMarketing human dynamics overview. Builds on Debra M. Amidon’s ‘Evolution of Thought’ 
-</Caption fullWidth>
+  MutualMarketing human dynamics overview. Builds on Debra M. Amidon’s ‘Evolution of Thought’
+</Caption>
 </Column>
 </Row>
 
