--- a/src/pages/basics/index.mdx
+++ b/src/pages/basics/index.mdx
@@ -14,7 +14,7 @@ import Feedback from "../../components/Feedback/Feedback"
 
 </PageDescription>
 
-<Row>
+<Row className="resource-card-group">
 <Column noGutterSm={true} colSm={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
