--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -12,7 +12,7 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
 
 </PageDescription>
 
-<Row>
+<Row className="resource-card-group">
 <Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
