--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -15,8 +15,6 @@ import './ethics.scss';
 
 ### *Every person involved* in the creation of AI at any step *is accountable for considering the system’s impact in the world*, as are the companies invested in its development.
 
-Read time | **5 minutes**
-
 </Column>
 
 <Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
@@ -26,7 +24,7 @@ Read time | **5 minutes**
 </Column>
 </Row>
 
-<Row className="hr recommended">
+<Row>
 <Column colSm={4}>
 
 ## Recommended actions to take
@@ -34,29 +32,28 @@ Read time | **5 minutes**
 </Column>
 <Column className={'recommendation'} colMd={4} colLg={4}>
 
-01
-
+**01**<br/>
 Make company policies clear and accessible to design and development teams from day one so that no one is confused about issues of responsibility or accountability. As an AI designer or developer, *it is your responsibility to know*.
 
 </Column>
 <Column className={'recommendation'} colMd={4} colLg={4}>
 
-02
-
+**02**<br/>
 Understand where the responsibility of the company/software ends. You may not have control over how data or a tool will be used by a user, client, or other external source.
 
 </Column>
+</Row>
+
+<Row className={'recommended'}>
 <Column className={'recommendation'} colMd={4} colLg={4}>
 
-03
-
+**03**<br/>
 Keep detailed records of your design processes and decision making. Determine a strategy for keeping records during the design and development process to encourage best practices and encourage iteration.
 
 </Column>
 <Column className={'recommendation'} colMd={4} colLg={4}>
 
-04
-
+**04**<br/>
 Adhere to your company’s business conduct guidelines. Also, understand [national and international laws, regulations, and guidelines](http://www.ohchr.org/EN/pages/home.aspx) that your AI may have to work within. You can find other related resources in the [IEEE Ethically Aligned Design document](https://ethicsinaction.ieee.org).
 
 </Column>
@@ -64,8 +61,8 @@ Adhere to your company’s business conduct guidelines. Also, understand [nation
 
 
 
-<Row className="hr consider">
-<Column colMd={5} colLg={7}>
+<Row className="consider">
+<Column colMd={7} colLg={7}>
 
 ## To consider
 
@@ -75,7 +72,7 @@ Adhere to your company’s business conduct guidelines. Also, understand [nation
 
 </Column>
 
-<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
 <Aside className={'quote'}>
 
 _“Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.”_
@@ -90,7 +87,7 @@ on _[Stack Overflow’s Developer Survey Results 2018](https://insights.stackove
 
 
 <Row className="questions">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Questions to ask your team
 
@@ -107,7 +104,7 @@ on _[Stack Overflow’s Developer Survey Results 2018](https://insights.stackove
 
 
 <Row className="example">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Accountability example
 
