--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -12,7 +12,6 @@ import './ethics.scss';
 
 ### AI provides deeper insight into our personal lives when interacting with our sensitive data. As humans are inherently vulnerable to biases, and are responsible for building AI, there are chances for human bias to be embedded in the systems we create. It is the role of a responsible team to minimize algorithmic bias through ongoing research and data collection which is representative of a diverse population.
 
-Read time | **5 mins**
 </Column>
 
 <Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
@@ -22,45 +21,43 @@ Read time | **5 mins**
 </Column>
 </Row>
 
-<Row className="hr recommended">
+<Row>
 <Column colSm={4}>
 
 ## Recommended actions to take
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-01
-
+**01**<br/>
 Real-time analysis of AI brings to light both intentional and
 unintentional biases. When bias in data becomes apparent, the
 team must investigate and understand where it originated and how
 it can be mitigated.
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-02
-
+**02**<br/>
 Design and develop without intentional biases and schedule team
 reviews to avoid unintentional biases. Unintentional biases can
 include stereotyping, confirmation bias, and sunk cost bias.
-(see CHART)
 
 </Column>
-<Column colMd={4} colLg={4}>
+</Row>
 
-03
+<Row className={'recommended'}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
+**03**<br/>
 Instill a feedback mechanism or open dialogue with users to raise awareness of user-identified biases or issues. e.g. *[Woebot](https://woebot.io)* asks “Let me know what you think,” after suggesting a link.
 
 </Column>
 </Row>
 
 
-
-<Row className="hr consider">
-<Column colMd={6} colLg={7}>
+<Row className="consider">
+<Column colMd={7} colLg={7}>
 
 ## To consider
 
@@ -75,7 +72,7 @@ Instill a feedback mechanism or open dialogue with users to raise awareness of u
 
 </Column>
 
-<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
 <Aside className={'quote'}>
 
 _“By progressing new ethical frameworks for AI and thinking critically about the quality of our datasets and how humans perceive and work with AI, we can accelerate the [AI] field in a way that will benefit everyone. IBM believes that [AI] actually holds the keys to mitigating bias out of AI systems – and offers an unprecedented opportunity to shed light on the existing biases we hold as humans.“_
@@ -89,7 +86,7 @@ _“By progressing new ethical frameworks for AI and thinking critically about t
 
 
 <Row className="questions">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Questions to ask your team
 
@@ -107,7 +104,7 @@ _“By progressing new ethical frameworks for AI and thinking critically about t
 
 
 <Row className="example">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Fairness example
 
