--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -14,8 +14,6 @@ import './ethics.scss';
 
 ### [Pew Research](www.pewresearch.org/fact-tank/2016/09/21/the-state-of-privacy-in-america/) recently found that being in control of our own information is “very important” to 74% of Americans. [The European Commission](https://ec.europa.eu/digital-single-market/en/news/eprivacy-consultations-show-confidentiality-communications-and-challenge-new-technologies-are) found that 71% of EU citizens find it unacceptable for companies to share information about them without their permission. These percentages will rise as AI is further used to either amplify our privacy or undermine it. Your company should be fully compliant with the applicable portions of EU’s [General Data Protection Regulation](https://www.eugdpr.org/) and any comparable regulations in other countries, to make sure users understand that AI is working in their best interests.
 
-Read time | **5 minutes**
-
 </Column>
 
 <Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
@@ -25,60 +23,60 @@ Read time | **5 minutes**
 </Column>
 </Row>
 
-<Row className="hr recommended">
+<Row>
 <Column colSm={4}>
 
 ## Recommended actions to take
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-01
-
+**01**<br/>
 Users should always maintain control over what data is being
 used and in what context. They can deny access to personal data
 that they may find compromising or unfit for an AI to know or
 use.
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-02
-
+**02**<br/>
 Allow users to deny service or data by having the AI ask for
 permission before an interaction or providing the option during
 an interaction. Privacy settings and permissions should be
 clear, findable, and adjustable.
 
 </Column>
-<Column colMd={4} colLg={4}>
+</Row>
 
-03
+<Row>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
+**03**<br/>
 Provide full disclosure on how the personal information is being
 used or shared.
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-04
-
+**04**<br/>
 Users' data should be protected from theft, misuse, or data
 corruption.
 
 </Column>
-<Column colMd={4} colLg={4}>
+</Row>
 
-05
+<Row className={'recommended'}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
+**05**<br/>
 Forbid use of another company's data without permission when
 creating a new AI service.
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-06
-
+**06**<br/>
 Recognize and adhere to applicable [national and international rights laws](http://www.ohchr.org/EN/ProfessionalInterest/Pages/InternationalLaw.aspx) when designing for an AI’s acceptable user data access permissions.
 
 </Column>
@@ -86,8 +84,8 @@ Recognize and adhere to applicable [national and international rights laws](http
 
 
 
-<Row className="hr consider">
-<Column colMd={5} colLg={7}>
+<Row className="consider">
+<Column colMd={7} colLg={7}>
 
 ## To consider
 
@@ -100,7 +98,7 @@ Recognize and adhere to applicable [national and international rights laws](http
 
 </Column>
 
-<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
 <Aside className={'quote'}>
 
 _“Individuals require mechanisms to help curate their unique identity and personal data in conjunction with policies and practices that make them explicitly aware of consequences resulting from the bundling or resale of their personal information.”_
@@ -115,7 +113,7 @@ on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.o
 
 
 <Row className="questions">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Questions to ask your team
 
@@ -134,7 +132,7 @@ on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.o
 
 
 <Row className="example">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Data rights example
 
