--- a/src/pages/ethics/value-alignment.mdx
+++ b/src/pages/ethics/value-alignment.mdx
@@ -13,8 +13,6 @@ import './ethics.scss';
 
 ### Today’s AI systems do not have these types of experiences to draw upon, so it is the job of designers and developers to collaborate with each other in order to ensure consideration of existing values. Care is required to ensure sensitivity to a wide range of cultural norms and values. As daunting as it may seem to take value systems into account, the common core of universal principles is that they are a cooperative phenomenon. Successful teams already understand that cooperation and collaboration leads to the best outcomes.
 
-Read time | **5 minutes**
-
 </Column>
 
 <Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
@@ -24,30 +22,30 @@ Read time | **5 minutes**
 </Column>
 </Row>
 
-<Row className="hr recommended">
+<Row>
 <Column colSm={4}>
 
 ## Recommended actions to take
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-01
-
+**01**<br/>
 Consider the culture that establishes the value systems you’re designing within. Whenever possible, bring in policymakers and academics that can help your team articulate relevant perspectives.
 
 </Column>
-<Column colMd={4} colLg={4}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
-02
-
+**02**<br/>
 Work with design researchers to understand and reflect your users’ values. [You can find out more about this process here](https://www.ibm.com/design/research/).
 
 </Column>
-<Column colMd={4} colLg={4}>
+</Row>
 
-03
+<Row className={'recommended'}>
+<Column className={'recommendation'} colMd={4} colLg={4}>
 
+**03**<br/>
 Consider mapping out your understanding of your users’ values and aligning the AI’s actions accordingly with [an Ethics Canvas](https://www.ethicscanvas.org). Values will be specific to certain use cases and affected communities. Alignment will allow users to better understand your AI’s actions and intents.
 
 </Column>
@@ -55,8 +53,8 @@ Consider mapping out your understanding of your users’ values and aligning the
 
 
 
-<Row className="hr consider">
-<Column colMd={5} colLg={7}>
+<Row className="consider">
+<Column colMd={7} colLg={7}>
 
 ## To consider
 
@@ -67,7 +65,7 @@ Consider mapping out your understanding of your users’ values and aligning the
 
 </Column>
 
-<Column colSm={2} colMd={2} colLg={3} offsetSm={2} offsetMd={1} noGutterSm>
+<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
 <Aside className={'quote'}>
 
 _“If machines engage in human communities as autonomous agents, then those agents will be expected to follow the community’s social and moral norms. <br/> A necessary step in enabling machines to do so is to identify these norms. But whose norms?”_
@@ -82,7 +80,7 @@ on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.o
 
 
 <Row className="questions">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Questions to ask your team
 
@@ -97,7 +95,7 @@ on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.o
 
 
 <Row className="example">
-<Column colMd={6} colLg={7}>
+<Column colMd={7} colLg={7}>
 
 ## Value alignment example
 
