responsive and ethics and ryan edits

--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -7,7 +7,7 @@ import './ethics.scss';
 
 
 <Row className="opener">
-<Column colSm={3} colMd={6} colLg={7}>
+<Column colSm={4} colMd={6} colLg={7}>
 
 ### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes.
 
@@ -17,7 +17,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
 
 ![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
 
@@ -89,7 +89,7 @@ on _[Stack Overflow’s Developer Survey Results 2018](https://insights.stackove
 <Row className="questions">
 <Column colMd={7} colLg={7}>
 
-## Questions to ask your team
+## Questions for your team
 
  - How does accountability change according to the levels of user influence over an AI system?
  - Is the AI to be embedded in a human decision-making process, is it making decisions on its own, or is it a hybrid?
