--- a/src/pages/ethics/explainability.mdx
+++ b/src/pages/ethics/explainability.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={3} colMd={6} colLg={7}>
+<Column colSm={4} colMd={6} colLg={7}>
 
 ### AI should be designed for humans to easily perceive, detect, and understand its decision process.
 
@@ -14,14 +14,14 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
 
 ![Explainability pictogram](../../images/ethics/explainability/Image_1.png)
 
 </Column>
 </Row>
 
-<Row className="hr recommended">
+<Row>
 <Column colSm={4}>
 
 ## Recommended actions to take
@@ -96,7 +96,7 @@ _“IBM supports transparency and data governance policies that will ensure peop
 <Row className="questions">
 <Column colMd={7} colLg={7}>
 
-## Questions to ask your team
+## Questions for your team
 
  - How do we build explainability into our experience without
  detracting from user experience or distracting from the task at
