--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={3} colMd={6} colLg={7}>
+<Column colSm={4} colMd={6} colLg={7}>
 
 ### AI must be designed to protect user data and preserve the user’s power over access and uses.
 
@@ -16,7 +16,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
 
 ![User data rights pictogram](../../images/ethics/user-data-rights/Image_1.png)
 
@@ -115,7 +115,7 @@ on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.o
 <Row className="questions">
 <Column colMd={7} colLg={7}>
 
-## Questions to ask your team
+## Questions for your team
 
  - What types of sensitive personal datadoes the AI utilize and
  how will this data be protected?
