--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -12,8 +12,6 @@ import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 </PageDescription>
 
-Read time | **5 mins**
-
 ## What is artificial intelligence?
 
 Any system capable of simulating human intelligence and thought processes is said to have “Artificial Intelligence” (AI). 
@@ -65,7 +63,17 @@ Each of AI tasks mentioned has its own unique implementation, but it can be boil
 ##### Rules based
 The rules-based approach uses algorithms — a sequence of unambiguous instructions used by computers to solve problems. It tells a computer precisely what steps to take to solve a problem or reach a goal. The chosen algorithm(s) determine how the AI will "think" about surfacing insights to address your problem space. Different algorithms have different goals, strengths, and weaknesses.  Choosing the right fit depends on your desired outcome and the
 
+<div class='hide-on-small'>
+
 ![AI](../../images/basics/ai/Image_1.png)
+
+</div>
+
+<div class='show-on-small'>
+
+![AI](../../images/basics/ai/Image_1_mobile.png)
+
+</div>
 
 ##### Examples based
 The examples-based approach uses data to create models. 
