--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={3} colMd={6} colLg={7}>
+<Column colSm={4} colMd={6} colLg={7}>
 
 ### AI must be designed to minimize bias and promote inclusive representation.
 
@@ -14,7 +14,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
 
 ![Fairness pictogram](../../images/ethics/fairness/Image_1.png)
 
@@ -88,7 +88,7 @@ _“By progressing new ethical frameworks for AI and thinking critically about t
 <Row className="questions">
 <Column colMd={7} colLg={7}>
 
-## Questions to ask your team
+## Questions for your team
 
  - How can we identify and audit unintentional biases that we run
  into during the design and development of our AI?
