--- a/src/pages/ethics/value-alignment.mdx
+++ b/src/pages/ethics/value-alignment.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={3} colMd={6} colLg={7}>
+<Column colSm={4} colMd={6} colLg={7}>
 
 ### AI should be designed to align with the norms and values of your user group in mind.
 ### AI works alongside diverse, human interests. People make decisions based on any number of contextual factors, including their experiences, memories, upbringing, and cultural norms. These factors allow us to have a fundamental understanding of “right and wrong” in a wide range of contexts, at home, in the office, or elsewhere. This is second nature for humans, as we have a wealth of experiences to draw upon.
@@ -15,7 +15,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
 
 ![Value alignment pictogram](../../images/ethics/value-alignment/Image_1.png)
 
@@ -82,7 +82,7 @@ on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.o
 <Row className="questions">
 <Column colMd={7} colLg={7}>
 
-## Questions to ask your team
+## Questions for your team
 
  - Which group’s values are expressed by our AI and why?
  - How do we agree on which values to consider as a team? (For more reading on moral alignment, [check here](http://faculty.mtsac.edu/cmcgruder/moraljudgements.html).)
