--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -84,7 +84,7 @@ This is helpful in cases where specifying rigid rules (i.e. writing algorithms
 
 Some helpful people at MIT created a flowchart that guides you through whether or not the thing you're looking at is, in fact, AI. You can find it here.
 
-##### See for yourself
+### See for yourself
  - [Watson Assistant](https://www.ibm.com/cloud/watson-assistant/)
  - [This person does not exist](https://thispersondoesnotexist.com/)
  - [Boston Dynamics robotics](https://www.youtube.com/watch?v=tf7IEVTDjng)
