--- a/src/pages/ethics/introduction.mdx
+++ b/src/pages/ethics/introduction.mdx
@@ -14,17 +14,27 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
 
 ## Introduction
 
-### Ethical decision-making is not just another form of technical problem solving.
-As AI designers and developers, we hold a vast share of the collective influence and it is an imperative to understand the ethical considerations of our work. We are creating systems that will impact millions of people.
-
-Artificial intelligence technology is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
-
-An ethical, human-centric AI must be designed and developed in a manner that is aligned with the values and ethical principles of a society or the community it affects. Ethics is based on well-founded standards of right and wrong that prescribe what humans ought to do, usually in terms of rights, obligations, benefits to society, fairness, or specific virtues ([Markkula Center for Applied Ethics](https://www.scu.edu/ethics/ethics-resources/ethical-decision-making/what-is-ethics/)).
-
 ### This guide provides discussion points concerning:
  - specific virtues that AI systems should possess;
  - guidance for designers and developers building and training AI.
 
-To create and foster trust between humans and machines, you must understand the ethical resources and standards available for reference during the designing, building, and maintenance of AI.
+Artificial intelligence is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
 
 AI systems must remain flexible enough to undergo constant maintenance and improvement as ethical challenges are discovered and remediated. By adopting and practicing the five focal areas covered here, designers and developers can become more ethically aware, mitigate biases within these systems, and instill responsibility and accountability in those who work with AI. Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns.
+
+#### Five Ethical Focal Areas
+ 1. [Accountability](/accountability)
+ 2. [Value Alignment](/value-alignment)
+ 3. [Explainability](/explainability)
+ 4. [Fairness](/fairness)
+ 5. [User Data Rights](/user-data-rights)
+
+These focal areas provide an intentional framework for establishing an ethical foundation for building and using AI systems. As much of what we do related to artificial intelligence is new territory for all of us, individuals and groups will need to further define criteria and metrics for evaluation to better allow for the detection and mitigation of any issues.
+
+The large-scale focus on AI ethics by groups like the IEEE Global Initiative on Ethics of Autonomous and Intelligent Systems, which will be referenced throughout this document, should be mirrored in businesses and working groups of all sizes. The criteria and metrics for ethical AI systems will ultimately depend on the industry and use case they operate within.
+
+We hope this document serves as a centralized source that helps teams establish best practices. Designers and developers should never work in a vacuum and must stay in tune with users’ needs and concerns.
+
+Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns. This guide provides teams with a starting point and will surely evolve as AI capabilities continue to grow.
+
+The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email <edethics@us.ibm.com>.
