--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -24,7 +24,7 @@ import './ethics.scss';
 <Row>
 <Column colSm={4}>
 
-## Recommended actions to take
+## Recommended actions
 
 </Column>
 <Column className={'recommendation'} colMd={4} colLg={4}>
