--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -2,7 +2,7 @@
 title: "Ethics"
 ---
 
-import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
+import { AnchorLink, AnchorLinks, Aside, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
 
 <PageDescription>
 
@@ -15,46 +15,48 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
 <Row className="resource-card-group">
 <Column noGutterSm={true} colSm={4} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
-  href={'ibm.com'}
-  subTitle={'Field Guide'}
-  title={'Everyday Ethics for AI'} />
+  href={'ibm.biz/everydayethics'}
+  subTitle={'Everyday Ethics for AI'} />
 </Column>
 <Column noGutterSm={true} colSm={4} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
-  href={'ibm.com'}
-  subTitle={'This is'}
-  title={'Something else'} />
+  href={'https://www.research.ibm.com/artificial-intelligence/trusted-ai/'}
+  subTitle={'Trusted AI'} />
+</Column>
+<Column noGutterSm={true} colSm={4} colMd={2} colMd={3} colLg={4}>
+<ResourceCard
+  href={'https://ethicsinaction.ieee.org/'}
+  subTitle={'IEEE’s Ethically Aligned Design'} />
+</Column>
+<Column noGutterSm={true} colSm={4} colMd={2} colMd={3} colLg={4}>
+<ResourceCard
+  href={'https://www.partnershiponai.org/'}
+  subTitle={'The Partnership on AI'} />
 </Column>
 </Row>
 
+## Ethical decision-making is not just another form of technical problem solving.
 
-## Introduction
+<Row>
+<Column colMd={7} colLg={7}>
 
-### Ethical decision-making is not just another form of technical problem solving.
 As AI designers and developers, we hold a vast share of the collective influence and it is an imperative to understand the ethical considerations of our work. We are creating systems that will impact millions of people.
 
 Artificial intelligence technology is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
 
-An ethical, human-centric AI must be designed and developed in a manner that is aligned with the values and ethical principles of a society or the community it affects. Ethics is based on well-founded standards of right and wrong that prescribe what humans ought to do, usually in terms of rights, obligations, benefits to society, fairness, or specific virtues ([Markkula Center for Applied Ethics](https://www.scu.edu/ethics/ethics-resources/ethical-decision-making/what-is-ethics/)).
+We’ll add content and resources to this section of the site over time as we incorporate them into our design practice. Our goal here is transparency around what works for us and our users, and why.
 
-### This guide provides discussion points concerning:
- - specific virtues that AI systems should possess;
- - guidance for designers and developers building and training AI.
+We’ve built our perspective through conversations with our subject matter experts, our teams, our stakeholders, and by referencing publicly available material. The resources below offer additional context on our foundational knowledge and insight into how these directions will continue to evolve in the future.
 
-To create and foster trust between humans and machines, you must understand the ethical resources and standards available for reference during the designing, building, and maintenance of AI.
+</Column>
 
-AI systems must remain flexible enough to undergo constant maintenance and improvement as ethical challenges are discovered and remediated. By adopting and practicing the five focal areas covered here, designers and developers can become more ethically aware, mitigate biases within these systems, and instill responsibility and accountability in those who work with AI. Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns.
+<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
+<Aside className={'quote'}>
 
-### Focus Areas
+_"An ethical, human-centric AI must be designed and developed in a manner that is aligned with the values and ethical principles of a society or the community it affects. Ethics is based on well-founded standards of right and wrong that prescribe what humans ought to do, usually in terms of rights, obligations, benefits to society, fairness, or specific virtues."_
 
-These focal areas provide an intentional framework for establishing an ethical foundation for building and using AI systems. As much of what we do related to artificial intelligence is new territory for all of us, individuals and groups will need to further define criteria and metrics for evaluation to better allow for the detection and mitigation of any issues.
+** [Markkula Center for Applied Ethics](https://www.scu.edu/ethics/ethics-resources/ethical-decision-making/what-is-ethics/) **
 
-- [Accountability](/accountability)
-- [Value Alignment](/value-alignment)
-- [Explainability](/explainability)
-- [Fairness](/fairness)
-- [User Data Rights](/user-data-rights)
-
-These focal areas provide an intentional framework for establishing an ethical foundation for building and using AI systems. As much of what we do related to artificial intelligence is new territory for all of us, individuals and groups will need to further define criteria and metrics for evaluation to better allow for the detection and mitigation of any issues.
-
-The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email <edethics@us.ibm.com>.
+</Aside>
+</Column>
+</Row>
